# dnd-vtt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.org  default.nix  flake.nix  shell.nix
.github/workflows/: cmake-multi-platform.yml
qml/: GameScreen.qml  HelpScreen.qml  HomeScreen.qml  Main.qml  MapsScreen.qml
src/: CMakeLists.txt  main.cpp  mapslogic.cpp  resources.qrc  screenmanager.h
src/ui/: gamelogic.cpp  gamelogic.h  helplogic.cpp  helplogic.h  mapslogic.h  screenmanager.cpp  screenmanager.h
tests/: CMakeLists.txt
